1.20.5+ name changes